src/snapshots/ruff__linter__tests__D406_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    NewLineAfterSectionName: Returns
  location:
    row: 30
    column: 5
  end_location:
    row: 36
    column: 8
  fix: ~
- kind:
    NewLineAfterSectionName: Raises
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~
- kind:
    NewLineAfterSectionName: Returns
  location:
    row: 252
    column: 5
  end_location:
    row: 262
    column: 8
  fix: ~
- kind:
    NewLineAfterSectionName: Raises
  location:
    row: 252
    column: 5
  end_location:
    row: 262
    column: 8
  fix: ~

