src/snapshots/ruff__linter__tests__D407_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    DashedUnderlineAfterSection: Returns
  location:
    row: 42
    column: 5
  end_location:
    row: 47
    column: 8
  fix: ~
- kind:
    DashedUnderlineAfterSection: Returns
  location:
    row: 54
    column: 5
  end_location:
    row: 58
    column: 8
  fix: ~
- kind:
    DashedUnderlineAfterSection: Raises
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~
- kind:
    DashedUnderlineAfterSection: Returns
  location:
    row: 252
    column: 5
  end_location:
    row: 262
    column: 8
  fix: ~
- kind:
    DashedUnderlineAfterSection: Raises
  location:
    row: 252
    column: 5
  end_location:
    row: 262
    column: 8
  fix: ~

